Added K-Means CNN For Hurricane Panoramic stitchin

--- a/index.html
+++ b/index.html
@@ -155,10 +155,14 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </div>
                                 <!-- /.col-md-6 -->
                                 <div class="col-md-6">
-                                    <h3>Majoring in Honours Bachelor of Computer Science with AI Specialization (2020-2025), University of Waterloo, Canada
+                                    <h3>Majoring in Honours Bachelor of Computer Science with AI Specialization
+                                        (2020-2025), University of Waterloo, Canada
                                     </h3>
                                     <p>
-                                        Embarking on the sacred path to AI mastery, my passion and curiosity guide me through uncharted territories—exploring the vast realms of cloud computing, neuroscience, computer vision, and the evolving art of AI, akin to a wise seeker in the realm of knowledge.
+                                        Embarking on the sacred path to AI mastery, my passion and curiosity guide me
+                                        through uncharted territories—exploring the vast realms of cloud computing,
+                                        neuroscience, computer vision, and the evolving art of AI, akin to a wise seeker
+                                        in the realm of knowledge.
                                     </p>
 
                                     <ul class="about-us-list">
@@ -486,7 +490,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <h5>Reinforcement Learning</h5>
                         </a>
                     </li>
- 
+
                     <li>
                         <a class="" href="#" data-filter=".CV">
                             <h5>Computer Vision</h5>
@@ -502,7 +506,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <h5>AWS</h5>
                         </a>
                     </li>
-        
+
 
                     <li>
 
@@ -514,15 +518,33 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <!-- Portfolio Wrapper -->
             <div class="isotope fadeInLeft animated wow grid" id="portfolio_wrapper">
                 <!-- Portfolio Item -->
-                <figure class="portfolio-item one-four RL isotope-item effect-oscar">
-                    <a href="https://github.com/codejedi-ai/Deepracer" class="fancybox">
+                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
+                    <a href="https://github.com/codejedi-ai/KMeans" class="fancybox">
                         <div class="portfolio_img">
-                            <img src="img/deepracer.png" alt="Portfolio 1" />
+                            <img src="img/bunny.bmp" alt="Portfolio 1" />
                         </div>
                         <figcaption>
                             <div>
-                                <h2><span>Deep Racer</span></h2>
-                                 <p>1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and AWS Sagemaker for reward function and hyper-performance, implemented the K1999 algorithm
+                                <h2><span>K-Means Algorithem for Unsupervised Learning</span></h2>
+                                <p>
+
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
+
+                <!-- Portfolio Item -->
+                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
+                    <a href="https://github.com/codejedi-ai/CV-Kaggle-hurricane-damage-classification" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/damage_no_damage.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+                                <h2><span>CNN for Hurricane Damage Classification</span></h2>
+                                <p>
 
                                 </p>
 
@@ -531,15 +553,15 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </a>
                 </figure>
                 <!--/Portfolio Item -->
-                <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
-                    <a href="" class="fancybox">
+                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
+                    <a href="https://github.com/codejedi-ai/RANSAC_Panorama" class="fancybox">
                         <div class="portfolio_img">
-                            <img src="img/nengo/delay_network.png" alt="Portfolio 1" />
+                            <img src="img/ImageStitching.png" alt="Portfolio 1" />
                         </div>
                         <figcaption>
                             <div>
-                                <h2><span>Panoramic Image Stichingl</span></h2>
-                                 <p>
+                                <h2><span>Panoramic Image Stiching</span></h2>
+                                <p>
                                     Applied homographies using Scikit libraries to seamlessly stitch panoramic images.
                                 </p>
 
@@ -557,7 +579,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div>
 
                                 <h2><span>Real-Time Online Learning with PES Rule</span></h2>
-                                 <p>Executed in the Neural Engineering Framework, the project enables adaptive connection weight adjustments, demonstrating effective online learning. It dynamically masters the identity function, aligning output closely with input after initial seconds. Rigorous testing includes systematic variations of hyperparameters, such as functions, learning rates, and training times.
+                                <p>Executed in the Neural Engineering Framework, the project enables adaptive connection
+                                    weight adjustments, demonstrating effective online learning. It dynamically masters
+                                    the identity function, aligning output closely with input after initial seconds.
+                                    Rigorous testing includes systematic variations of hyperparameters, such as
+                                    functions, learning rates, and training times.
 
                                 </p>
 
@@ -565,6 +591,31 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </figcaption>
                     </a>
                 </figure>
+                <!-- Portfolio Item make one for cartpole -->
+                <figure class="portfolio-item one-four RL isotope-item effect-oscar">
+                    <a href="vids/CartpoleRenforcementLearning_1.mp4" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/RL_CartPole.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
+                                <h2><span>CartPole with Reinforcement Learning</span></h2>
+                                <p>Implemented a PPO algorithm to solve the CartPole problem. The agent learns
+                                    the optimal policy to balance the pole on the cart. The agent is rewarded for
+                                    keeping the pole balanced and penalized for letting it fall. The agent learns the
+                                    optimal policy to balance the pole on the cart. The agent is rewarded for keeping
+                                    the pole balanced and penalized for letting it fall.
+
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
+
+
+
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
                     <a href="vids/ParlovDog.mp4" class="fancybox">
                         <div class="portfolio_img">
@@ -574,7 +625,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div>
 
                                 <h2>Pavlov's Dog Conditional Stimulus Simulation </h2>
-                                 <p>Utilized Nengo simulation, applying PBS learning rule for dynamic stimuli-response weight adjustments. Successfully replicated Pavlovian behavior, offering nuanced insights. Demonstrated "neurons that fire together wire together" principle, showcasing emergent neural connectivity patterns.
+                                <p>Utilized Nengo simulation, applying PBS learning rule for dynamic stimuli-response
+                                    weight adjustments. Successfully replicated Pavlovian behavior, offering nuanced
+                                    insights. Demonstrated "neurons that fire together wire together" principle,
+                                    showcasing emergent neural connectivity patterns.
 
                                 </p>
 
@@ -591,7 +645,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>Decision Making Model with Nengo Neural Simulator</span> </h2>
-                                 <p>Utilized Nengo 3.2.0 to simulate a neuro accumulator, integrating input functions. Implemented synaptic connections for binary decisions, assessing diverse ensembles to capture biological relevance in decision-making.
+                                <p>Utilized Nengo 3.2.0 to simulate a neuro accumulator, integrating input functions.
+                                    Implemented synaptic connections for binary decisions, assessing diverse ensembles
+                                    to capture biological relevance in decision-making.
 
                                 </p>
 
@@ -608,10 +664,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div>
 
                                 <h2><span>Django+TensorFL Hub:Object Detection </span></h2>
-                                <p> Developed a robust Django web application and seamlessly integrated TensorFlow Hub's Inception ResNet V2 model, enhancing capabilities in image analysis and object detection.                                  
+                                <p> Developed a robust Django web application and seamlessly integrated TensorFlow Hub's
+                                    Inception ResNet V2 model, enhancing capabilities in image analysis and object
+                                    detection.
 
 
-                                 </p>
+                                </p>
 
                             </div>
                         </figcaption>
@@ -670,23 +728,24 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-                    <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
-                        <div class="portfolio_img">
-                            <img src="img/devmlops.png" alt="Portfolio 1" />
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
+                    <div class="portfolio_img">
+                        <img src="img/devmlops.png" alt="Portfolio 1" />
+                    </div>
+                    <figcaption>
+                        <div>
+                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/"
+                                class="nav-link">
+                                <h2>DEVMLOPS </h2>
+                                <p>
+                                    DevOps + Machine Learning
+                                </p>
+                            </a>
                         </div>
-                        <figcaption>
-                            <div>
-                                <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
-                                    <h2>DEVMLOPS </h2>
-                                    <p>
-                                        DevOps + Machine Learning
-                                    </p>
-                                </a>
-                            </div>
-                        </figcaption>
-                    </figure>
+                    </figcaption>
+                </figure>
                 <!--/Portfolio Item -->
-                
+
                 <!-- Portfolio Item -->
 
                 <!--/Portfolio Item -->
