k-means, hurricane, openAI gym

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="isotope fadeInLeft animated wow grid" id="portfolio_wrapper">
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four CV isotope-item effect-oscar">
-                    <a href="https://github.com/codejedi-ai/KMeans" class="fancybox">
+                    <a href="vids/K-means_V1.mp4" class="fancybox">
                         <div class="portfolio_img">
                             <img src="img/bunny.bmp" alt="Portfolio 1" />
                         </div>
@@ -537,7 +537,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four CV isotope-item effect-oscar">
-                    <a href="https://github.com/codejedi-ai/CV-Kaggle-hurricane-damage-classification" class="fancybox">
+                    <a href="vids/Hurricane.mp4" class="fancybox">
                         <div class="portfolio_img">
                             <img src="img/damage_no_damage.png" alt="Portfolio 1" />
                         </div>
@@ -554,7 +554,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
                 <figure class="portfolio-item one-four CV isotope-item effect-oscar">
-                    <a href="https://github.com/codejedi-ai/RANSAC_Panorama" class="fancybox">
+                    <a href="vids/PanoramicStich_1.mp4" class="fancybox">
                         <div class="portfolio_img">
                             <img src="img/ImageStitching.png" alt="Portfolio 1" />
                         </div>
@@ -604,8 +604,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <p>Implemented a PPO algorithm to solve the CartPole problem. The agent learns
                                     the optimal policy to balance the pole on the cart. The agent is rewarded for
                                     keeping the pole balanced and penalized for letting it fall. The agent learns the
-                                    optimal policy to balance the pole on the cart. The agent is rewarded for keeping
-                                    the pole balanced and penalized for letting it fall.
+                                    optimal policy to balance the pole on the cart. 
 
                                 </p>
 
