add pragraph descriptions

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>K-Means Algorithem for Unsupervised Learning</span></h2>
-                                <p>
+                                <p>Enhancing image understanding through the extraction of meaningful patterns from data, improving visual comprehension. 
 
                                 </p>
 
@@ -544,7 +544,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>CNN for Hurricane Damage Classification</span></h2>
-                                <p>
+                                <p>Utilized Convolutional Neural Networks for classifying the existence ofhurricane damage. This advanced model provides nuanced insights, aiding disaster response planning by allocating resources more precisely based on detected severity levels in the visual data.
 
                                 </p>
 
@@ -561,8 +561,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>Panoramic Image Stiching</span></h2>
-                                <p>
-                                    Applied homographies using Scikit libraries to seamlessly stitch panoramic images.
+                                <p>Implemented homographies with Scikit libraries for panoramic image stitching, seamlessly blending visual elements. This technique enhances the creation of panoramic images, ensuring a cohesive and visually pleasing result by aligning and combining multiple images through geometric transformations.
                                 </p>
 
                             </div>
@@ -581,7 +580,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <h2><span>Real-Time Online Learning with PES Rule</span></h2>
                                 <p>Executed in the Neural Engineering Framework, the project enables adaptive connection
                                     weight adjustments, demonstrating effective online learning. It dynamically masters
-                                    the identity function, aligning output closely with input after initial seconds.
+                                    the square function, aligning output closely with input after initial seconds.
                                     Rigorous testing includes systematic variations of hyperparameters, such as
                                     functions, learning rates, and training times.
 
@@ -600,11 +599,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
 
-                                <h2><span>CartPole with Reinforcement Learning</span></h2>
-                                <p>Implemented a PPO algorithm to solve the CartPole problem. The agent learns
-                                    the optimal policy to balance the pole on the cart. The agent is rewarded for
-                                    keeping the pole balanced and penalized for letting it fall. The agent learns the
-                                    optimal policy to balance the pole on the cart. 
+                                <h2><span>Tackling CartPole with OpenAI Gym</span></h2>
+                                <p>Designed a resilient reinforcement learning model for CartPole-v1 in OpenAI Gym. Implemented a Proximal Policy Optimization (PPO) algorithm to train the agent in maintaining optimal balance on the cart-mounted pole.
 
                                 </p>
 
