Added Nationstates LLM

--- a/index.html
+++ b/index.html
@@ -526,7 +526,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>K-Means Algorithem for Unsupervised Learning</span></h2>
-                                <p>Enhancing image understanding through the extraction of meaningful patterns from data, improving visual comprehension. 
+                                <p>Enhancing image understanding through the extraction of meaningful patterns from
+                                    data, improving visual comprehension.
 
                                 </p>
 
@@ -544,7 +545,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>CNN for Hurricane Damage Classification</span></h2>
-                                <p>Utilized Convolutional Neural Networks for classifying the existence ofhurricane damage. This advanced model provides nuanced insights, aiding disaster response planning by allocating resources more precisely based on detected severity levels in the visual data.
+                                <p>Utilized Convolutional Neural Networks for classifying the existence ofhurricane
+                                    damage. This advanced model provides nuanced insights, aiding disaster response
+                                    planning by allocating resources more precisely based on detected severity levels in
+                                    the visual data.
 
                                 </p>
 
@@ -561,7 +565,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
                                 <h2><span>Panoramic Image Stiching</span></h2>
-                                <p>Implemented homographies with Scikit libraries for panoramic image stitching, seamlessly blending visual elements. This technique enhances the creation of panoramic images, ensuring a cohesive and visually pleasing result by aligning and combining multiple images through geometric transformations.
+                                <p>Implemented homographies with Scikit libraries for panoramic image stitching,
+                                    seamlessly blending visual elements. This technique enhances the creation of
+                                    panoramic images, ensuring a cohesive and visually pleasing result by aligning and
+                                    combining multiple images through geometric transformations.
                                 </p>
 
                             </div>
@@ -600,7 +607,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div>
 
                                 <h2><span>Tackling CartPole with OpenAI Gym</span></h2>
-                                <p>Designed a resilient reinforcement learning model for CartPole-v1 in OpenAI Gym. Implemented a Proximal Policy Optimization (PPO) algorithm to train the agent in maintaining optimal balance on the cart-mounted pole.
+                                <p>Designed a resilient reinforcement learning model for CartPole-v1 in OpenAI Gym.
+                                    Implemented a Proximal Policy Optimization (PPO) algorithm to train the agent in
+                                    maintaining optimal balance on the cart-mounted pole.
 
                                 </p>
 
@@ -740,7 +749,21 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
+                    <a href="https://github.com/codejedi-ai/nationstate-LLM" class="nav-link"></a>
+                    <div class="portfolio_img">
+                        <img src="img/Nationstates-LLM.png" alt="Portfolio 1" />
+                    </div>
+                    <figcaption>
+                        <div>
+                            <h2><span> Analyze progressive bias in the GPT-4 model: Nationstates-LLM </span></h2>
+                            <p>
+                                Utlizing AI to play the Nationstates Game to look for progressive Bias
+                            </p>
+                        </div>
+                    </figcaption>
+                    </a>
+                </figure>
                 <!-- Portfolio Item -->
 
                 <!--/Portfolio Item -->
