added nationstates LLM

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
+                <figure class="portfolio-item one-four SWE isotope-item effect-oscar">
                     <a href="https://github.com/codejedi-ai/nationstate-LLM" class="nav-link"></a>
                     <div class="portfolio_img">
                         <img src="img/Nationstates-LLM.png" alt="Portfolio 1" />
