added nationstates LLM

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
                 <figure class="portfolio-item one-four SWE isotope-item effect-oscar">
-                    <a href="https://github.com/codejedi-ai/nationstate-LLM" class="nav-link"></a>
+                    <a href="https://github.com/codejedi-ai/Nationstate-LLM" class="nav-link">
                     <div class="portfolio_img">
                         <img src="img/Nationstates-LLM.png" alt="Portfolio 1" />
                     </div>
