Utilized the nationstates API to access data and make decisions in the game. Drafted a virtual nation constitution, enabling GPT-4 to read and select the most appropriate decision according to my constitution. Evaluation revealed minimal progressive bias, affirming GPT-4's alignment to constitutional values.

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <div>
                             <h2><span> Analyze progressive bias in the GPT-4 model: Nationstates-LLM </span></h2>
                             <p>
-                                Utlizing AI to play the Nationstates Game to look for progressive Bias
+                                Utilized the nationstates API to access data and make decisions in the game. Drafted a virtual nation constitution, enabling GPT-4 to read and select the most appropriate decision according to my constitution. Evaluation revealed minimal progressive bias, affirming GPT-4's alignment to constitutional values.
                             </p>
                         </div>
                     </figcaption>
