--- a/index.html
+++ b/index.html
@@ -765,7 +765,21 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </a>
                 </figure>
                 <!-- Portfolio Item -->
-
+                <figure class="portfolio-item one-four SWE isotope-item effect-oscar">
+                    <a href="https://github.com/codejedi-ai/GMM-Segmentation" class="nav-link">
+                    <div class="portfolio_img">
+                        <img src="img/Nationstates-LLM.png" alt="Portfolio 1" />
+                    </div>
+                    <figcaption>
+                        <div>
+                            <h2><span> GMM-Segmentation </span></h2>
+                            <p>
+                                Implemented the Gaussian mixture model (GMM) for image segmentation, effectively distinguishing foreground and background. This segmentation facilitated the identification of prominent features, thereby enhancing overall image comprehension and visual understanding.
+                            </p>
+                        </div>
+                    </figcaption>
+                    </a>
+                </figure>
                 <!--/Portfolio Item -->
 
             </div>
