--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <figure class="portfolio-item one-four SWE isotope-item effect-oscar">
                     <a href="https://github.com/codejedi-ai/GMM-Segmentation" class="nav-link">
                     <div class="portfolio_img">
-                        <img src="img/Nationstates-LLM.png" alt="Portfolio 1" />
+                        <img src="img/SegmanticPic.png" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
