--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <div class="timeline-panel debits">
                                     <ul class="timeline-panel-ul">
                                         <!---->
-                                        <li><span class="importo">?</span></li>
-                                        <li><span class="causale"><img src="img/diamond.gif"><a href=""> </a></span>
+                                        <li><span class="importo">Cloud Engeneer</span></li>
+                                        <li><span class="causale">Sun Life<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
                                         </li>
                                         <li>
-                                            <p><small class="text-muted"> May ~ Dec., 2024 (8 Months)</small></p>
+                                            <p><small class="text-muted"> May ~ Aug., 2024 (8 Months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
