--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <div class="timeline-panel debits">
                                     <ul class="timeline-panel-ul">
                                         <!---->
-                                        <li><span class="importo">Cloud Engeneer</span></li>
+                                        <li><span class="importo">Cloud Engineer</span></li>
                                         <li><span class="causale">Sun Life<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
                                         </li>
                                         <li>
