Fixed more portfolio

--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <div class="col-md-3">
                         <div class="skills_icon icon3 delay-03s animated wow zoomIn">
-                            <img src="img/tf_badge_cert_tf_certified_developer.png" alt="AWS-Developer" />
+                            <span></span>
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">Tensorflow Developer Cert.</h3>
+                            <h3 class="animated fadeInUp wow">AWS Certified DevOps Engineer - Professional</h3>
                             <p class="animated fadeInDown wow">
                                 ?
                             </p>
@@ -292,18 +292,35 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <span class="timeline-balloon-date-day"></span>
                         <span class="timeline-balloon-date-month">2024</span>
                     </div>
+                    <div class="col-sm-6  timeline-item">
+                        <div class="row">
+                            <div class="col-sm-11">
+                                <div class="timeline-panel credits">
+                                    <ul class="timeline-panel-ul">
+                                        <!---->
+                                        <li><span class="importo">Open to Work</span></li>
+                                        <li><span class="causale">?<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
+                                        </li>
+                                        <li>
+                                            <p><small class="text-muted"> Sep ~ ? (4 or 8 months)</small></p>
+                                        </li>
+                                    </ul>
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-sm-offset-6 col-sm-6  timeline-item">
                         <div class="row">
                             <div class="col-sm-offset-1 col-sm-11">
                                 <div class="timeline-panel debits">
                                     <ul class="timeline-panel-ul">
                                         <!---->
-                                        <li><span class="importo">Cloud Engineer</span></li>
+                                        <li><span class="importo">Cloud Engineer Intern (Remote)</span></li>
                                         <li><span class="causale">Sun Life<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
                                         </li>
                                         <li>
-                                            <p><small class="text-muted"> May ~ Aug., 2024 (8 Months)</small></p>
+                                            <p><small class="text-muted"> May ~ Aug., 2024 (4 months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -343,7 +360,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div class="col-sm-11">
                                 <div class="timeline-panel credits">
                                     <ul class="timeline-panel-ul">
-                                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
+                                        <li><span class="importo">Site Reliability Engineer Intern (Remote)</span></li>
                                         <li><span class="causale"><img src="img/diamond.gif"><a
                                                     href="https://oanda.com/ca-en/">OANDA (Canada) Corporation| Toronto,
                                                     ON, Canada </a></span> </li>
@@ -370,7 +387,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <div class="col-sm-offset-1 col-sm-11">
                                 <div class="timeline-panel debits">
                                     <ul class="timeline-panel-ul">
-                                        <li><span class="importo">Site Reliability Engineer Intern</span></li>
+                                        <li><span class="importo">Site Reliability Engineer Intern (Hybrid)</span></li>
                                         <li><span class="causale"><img src="img/diamond.gif"><a
                                                     href="https://carta.com/"> Carta Maple Technologies Inc.| Waterloo,
                                                     ON, Canada </a></span> </li>
@@ -803,7 +820,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <div class="contact_section">
                     <h2>Get In Touch</h2>
                     <h6>
-                        <h3><a href="https://www.linkedin.com/in/codejediatuw/">Let's Linked in</i></a></h3>
+                        <h3><a href="https://www.linkedin.com/in/codejediatuw/">Let's Linked in</a></h3>
+                        <h3><a href="https://github.com/codejedi-ai">GitHub</a></h3>
                     </h6>
                 </div>
             </section>
