--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <div class="timeline-panel credits">
                                     <ul class="timeline-panel-ul">
                                         <!---->
-                                        <li><span class="importo">Open to Work</span></li>
-                                        <li><span class="causale">?<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
+                                        <li><span class="importo">Open Text</span></li>
+                                        <li><span class="causale">Software Developer Intern (DevOps)<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
                                         </li>
                                         <li>
-                                            <p><small class="text-muted"> Sep ~ ? (4 or 8 months)</small></p>
+                                            <p><small class="text-muted"> Sep ~ Dec., 2024 (4 months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
