adit the text styling

--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 <div class="timeline-panel credits">
                                     <ul class="timeline-panel-ul">
                                         <!---->
-                                        <li><span class="importo">DevOps Software Developer Intern (Hybrid)</span></li>
-                                        <li><span class="causale">Open Text<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
+                                        <li><span class="importo"> Software Developer Intern - DevOps (Hybrid)</span></li>
+                                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://www.opentext.com/">Open Text Corporation| Ottawa,
+                                            ON, Canada </a></span>
                                         </li>
                                         <li>
                                             <p><small class="text-muted"> Sep ~ Dec., 2024 (4 months)</small></p>
@@ -317,7 +318,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     <ul class="timeline-panel-ul">
                                         <!---->
                                         <li><span class="importo">Cloud Engineer Intern (Remote)</span></li>
-                                        <li><span class="causale">Sun Life<img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/"> </a></span>
+                                        <li><span class="causale"><img src="img/diamond.gif"><a href="https://www.sunlife.ca/en/">Sun Life Financial| Toronto,
+                                            ON, Canada </a></span>
                                         </li>
                                         <li>
                                             <p><small class="text-muted"> May ~ Aug., 2024 (4 months)</small></p>
